--- a/lektion-4/css/style.css
+++ b/lektion-4/css/style.css
@@ -43,6 +43,10 @@ body {
     border-color: #ffda75;
 }
 
+header {
+    padding-bottom: 3rem;
+}
+
 /* navbar */
 
 .navbar {
@@ -64,11 +68,9 @@ body {
     width: 60%;
 }
 
-.navbar-dark .navbar-nav .show > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active {
     color: #ffbb00;
 }
-.navbar-dark .navbar-nav .show > .nav-link::after,
 .navbar-dark .navbar-nav .nav-link.active::after {
     content: "";
     border-bottom: 3px solid #ffbb00;
@@ -97,8 +99,7 @@ body {
     display: grid;
     grid-template-areas:    "title"
                             "ingress"
-                            "watch"
-                            "download";
+                            "buttons";
 }
 #showcase .title {
     grid-area: title;
@@ -108,21 +109,31 @@ body {
     grid-area: ingress;
     margin: 0.5rem 0;
 }
-#showcase .download {
+
+#showcase .buttons {
+    grid-area: buttons;
+
+    display:grid;
+    grid-template-areas: "watch"
+                         "download";
+}
+
+#showcase .buttons .download {
     grid-area: download;
     color: #333333;
     border-color: #333333;
-    margin: 2rem 0;
+    margin: 0rem 0;
 }
-#showcase .watch {
+#showcase .buttons .watch {
     grid-area: watch;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    outline: none;
+    outline: none;   
 }
 
-
-
+#showcase .buttons .watch .d-flex {
+    justify-content: center;
+}
 
 #showcase .second-column {
     grid-area: second;
@@ -132,11 +143,99 @@ body {
     margin: 1rem 0;
 }
 
+/* about us */
+#about-us {
+    text-align: center;
+    display: grid;
+    grid-template-areas:    "second"
+                            "first";
+
+    padding-bottom: 3rem;
+}
+
+#about-us .first-column {
+    grid-area: first;
+    display: grid;
+    grid-template-areas:    "tile"
+                            "title"
+                            "ingress"
+                            "buttons";     
+}
+
+#about-us .first-column .section-tile {
+    grid-area: tile;
+    display: none;
+    background-color: rgba(255,187,0,0.15);
+    color:#ffbb00;
+    padding: 0.4rem 1rem;
+    border-radius: 7px;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    margin: 1.25rem 0;
+    text-align: center;
+    width: 20%;
+}
+#about-us .first-column .title {
+    grid-area: title;
+    display: none;
+}
+#about-us .first-column .ingress {
+    grid-area: ingress;
+    display: none;
+}
+#about-us .first-column .buttons {
+    grid-area: buttons;
+    margin: 0rem 0;
+}
+#about-us .first-column .buttons .store-button {
+    margin: 1rem 0;
+}
+
+#about-us .second-column {
+    grid-area: second;
+    position: relative;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+}
+
+#about-us .second-column .iphone {
+    width: 70%;
+}
+
+#about-us .second-column .circles {
+    position: absolute;
+    width: 90%;
+    top: 100px;
+    left: 15px;
+    z-index: -1;
+    animation: rotate 4s linear infinite;
+}
+
+/* features */
+#features {
+    background: #F5F5F5;
+    position: relative;
+    display: grid;
+    /* grid-template-columns: 1fr minmax(768px,1320px) 1fr; */
+    grid-template-areas: "middle";
 
 
+}
 
-
-
+#features .left {
+    grid-area: left;
+    text-align: left;
+    display: none;
+}
+#features .middle {
+    grid-area: middle;
+    text-align: left;
+}
+#features .right {
+    grid-area: right;
+    text-align: right;
+    display: none;
+}
 
 
 
@@ -145,13 +244,17 @@ body {
     header {
         background: url(../images/bg.png) no-repeat;
         background-size: contain;
-        min-height: 100vh;
+        min-height: 40vh;
     }
 
     .navbar {
         background-color: transparent;
     }
 
+    .navbar .get-app {
+        margin: 0 0;
+    }
+    
 
     #showcase {
         align-items: center;
@@ -166,15 +269,118 @@ body {
     }
 
     #showcase .first-column .title,
-    #showcase .first-column .ingress {
+    #showcase .first-column .ingress,
+    #showcase .first-column .buttons {
         width: 90%;
     }
+
+    #showcase .first-column .buttons {
+        display: flex;
+        align-items: center;
+        
+    }
+
+    #showcase .buttons .download {
+        color: #fff;
+        border-color: #fff;
+    }
+
+    #showcase .buttons .watch {
+        color: #fff;
+    }
+
+    #showcase .buttons .watch .d-flex {
+        justify-content: flex-start;
+    }
+
+    #about-us {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "second first";
+
+        text-align: left;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    #about-us .first-column .section-tile,
+    #about-us .first-column .title, 
+    #about-us .first-column .ingress {
+        display: inline-block;
+    }
+
+    #about-us .second-column {
+        text-align: center;
+    }
+
+    #about-us .second-column .iphone {
+        width: 60%;
+        position: relative;
+        left: -7px;
+    }
+
+
 }
 
 @media (min-width: 1200px) {
     .navbar-dark .navbar-nav .nav-link {
         margin-right: 3.5rem;
     }    
+
+    #showcase {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:   "first second";
+    }
+
+    #showcase .first-column .title,
+    #showcase .first-column .ingress,
+    #showcase .first-column .buttons {
+        width: 100%;
+    }
+
+    #showcase .first-column .title {
+        font-size: 55px;
+    }
+
+    #showcase .second-column {
+        text-align: right;
+    }
+    #showcase .second-column .mobiles {
+        width: 80%;
+    }
+
+    #about-us .first-column .buttons .store-button {
+        margin-right: 1rem;
+    }
+
+    #about-us .second-column {
+        text-align: left;
+    }
+
+    #about-us .second-column #phone2 {
+        position: absolute;
+        z-index: -1;
+        transform: rotate(-25deg);
+        width: 50%;
+        left: -148px;
+        top: 100px;
+    }
+
+    #about-us .second-column .circles {
+        left: -100px;
+        z-index: -2;
+    }
+
+    #features {
+        grid-template-columns: 1fr minmax(768px,1320px) 1fr;
+        grid-template-areas: "left middle right";
+    }
+
+    #features .left {
+        display: block;
+    }
+    #features .right {
+        display: block;
+    }
 }
 
 
