--- a/lektion-8/css/scss/helpers/_mixins.scss
+++ b/lektion-8/css/scss/helpers/_mixins.scss
@@ -2,3 +2,15 @@
     background-color: $value;
     color: set-color($value);
 }
+
+@mixin d-flex-between() {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@mixin d-flex-center() {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
