--- a/lektion-8/css/scss/_base.scss
+++ b/lektion-8/css/scss/_base.scss
@@ -12,3 +12,25 @@ html, body {
     color: $dark;
     background: $light;
 }
+
+.shadow {
+    box-shadow: 0 0 5px 5px rgba(0,0,0,0.15);
+}
+
+.container {
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1320px;
+}
+
+.icon {
+    @include d-flex-center;
+    @include set-colors($light-purple);
+    width: 40px;
+    height: 40px;
+    border-radius: 7px;
+    font-weight: $medium;
+}
