--- a/lektion-8/css/scss/_base.scss
+++ b/lektion-8/css/scss/_base.scss
@@ -13,8 +13,12 @@ html, body {
     background: $light;
 }
 
+a {
+    text-decoration: none;
+}
+
 .shadow {
-    box-shadow: 0 0 5px 5px rgba(0,0,0,0.15);
+    box-shadow: 0 0 5px 2px rgba(0,0,0,0.15);
 }
 
 .container {
@@ -33,4 +37,15 @@ html, body {
     height: 40px;
     border-radius: 7px;
     font-weight: $medium;
+}
+
+.page-title {
+    @include title();
+}
+
+.rotate {
+    &:hover {
+        transform: rotate(360deg);
+        transition: transform 0.5s linear;       
+    }
 }
