--- a/lektion-8/css/scss/style.scss
+++ b/lektion-8/css/scss/style.scss
@@ -4,6 +4,7 @@
 // components
 @import 'components/navbar';
 @import 'components/card';
+@import 'components/table';
 
 // pages
-@import 'pages/dashboard';
+@import 'pages/dashboard'; 
