--- a/lektion-8/css/scss/_base.scss
+++ b/lektion-8/css/scss/_base.scss
@@ -49,3 +49,16 @@ a {
         transition: transform 0.5s linear;       
     }
 }
+
+.text-small {
+    font-size: 0.8em;
+}
+
+.status {
+    width: 80px;
+    padding: 0.3rem 0;
+    text-align: center;
+    border-radius: 7px;
+    font-weight: $medium;
+    font-size: 0.9em;
+}
