--- a/lektion-8/css/scss/components/_card.scss
+++ b/lektion-8/css/scss/components/_card.scss
@@ -21,4 +21,15 @@
             }
         }
     }
+
+    &-footer {
+        position: absolute;
+        bottom:0;
+        left: 0;
+    }
+
+    &-img {
+        width: 100%;
+    }
+
 }
